force-app/main/default/objects/ucinn_ascendv2__Bio_Demo_Setting__mdt/fields/ucinn_ascendv2__SmartyStreets_Match_Method__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__SmartyStreets_Match_Method__c</fullName>
    <description>For US Address Verification.

strict - The API will return detailed output only if a valid match is found.
invalid - The API will return detailed output for both valid and invalid addresses.
enhanced - The API will return detailed output based on a more aggressive matching mechanism. Only available with us-core-cloud license.</description>
    <inlineHelpText>For US Address Verification.

strict - The API will return detailed output only if a valid match is found.
invalid - The API will return detailed output for both valid and invalid addresses.
enhanced - The API will return detailed output based on a more aggressive matching mechanism. Only available with us-core-cloud license.</inlineHelpText>
    <label>SmartyStreets Match Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>strict</fullName>
            </value>
            <value>
                <fullName>invalid</fullName>
                <default>true</default>
                <label>invalid</label>
            </value>
            <value>
                <fullName>enhanced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>