force-app/main/default/objects/ucinn_ascendv2__Bio_Demo_Setting__mdt/fields/ucinn_ascendv2__State_and_Country_Picklist__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__State_and_Country_Picklist__c</fullName>
    <description>Stores the Country State picklist values with the country Name(label) as the key.</description>
    <inlineHelpText>Stores the Country State picklist values with the country Name(label) as the key.</inlineHelpText>
    <label>State and Country Picklist</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>