force-app/main/default/objects/ucinn_ascendv2__Bio_Demo_Setting__mdt/fields/ucinn_ascendv2__State_and_Country_Picklist_ISO_Code__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__State_and_Country_Picklist_ISO_Code__c</fullName>
    <description>Stores the Country State Picklist values with the ISO code as the key.</description>
    <inlineHelpText>Stores the Country State Picklist values with the ISO code as the key.</inlineHelpText>
    <label>State and Country Picklist ISO Code</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>