force-app/main/default/objects/ucinn_ascendv2__Bio_Demo_Setting__mdt/fields/ucinn_ascendv2__State_and_Country_Picklist_Value__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__State_and_Country_Picklist_Value__c</fullName>
    <description>Stores the Country State Picklist values with the integration Value as the key.</description>
    <inlineHelpText>Stores the Country State Picklist values with the integration Value as the key.</inlineHelpText>
    <label>State and Country Picklist Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>