force-app/main/default/objects/ucinn_ascendv2__Bio_Demo_Setting__mdt/fields/ucinn_ascendv2__Update_Constituent_Type_on_Deg_Change_v1__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Update_Constituent_Type_on_Deg_Change_v1__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Update constituent type when inserting / updating / deleting degree information</description>
    <label>Update Constituent Type on Deg Change</label>
    <type>Checkbox</type>
</CustomField>