force-app/main/default/objects/ucinn_ascendv2__Bio_Demo_Setting__mdt/validationRules/ucinn_ascendv2__Household_Naming_Convention_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>ucinn_ascendv2__Household_Naming_Convention_Rule</fullName>
    <active>true</active>
    <description>Household Naming Convention must not be blank.</description>
    <errorConditionFormula>ISBLANK(ucinn_ascendv2__Household_Naming_Convention__c)</errorConditionFormula>
    <errorDisplayField>ucinn_ascendv2__Household_Naming_Convention__c</errorDisplayField>
    <errorMessage>Household Naming Convention must not be blank.</errorMessage>
</ValidationRule>