force-app/main/default/objects/ucinn_ascendv2__Bio_Demo_Setting__mdt/validationRules/ucinn_ascendv2__Name_Connector_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>ucinn_ascendv2__Name_Connector_Rule</fullName>
    <active>true</active>
    <description>Household Name Connector must not be blank.</description>
    <errorConditionFormula>ISBLANK( ucinn_ascendv2__Household_Name_Connector__c )</errorConditionFormula>
    <errorDisplayField>ucinn_ascendv2__Household_Name_Connector__c</errorDisplayField>
    <errorMessage>Household Name Connector must not be blank.</errorMessage>
</ValidationRule>