force-app/main/default/objects/ucinn_ascendv2__Bio_Demo_Setting__mdt/validationRules/ucinn_ascendv2__Overrun_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>ucinn_ascendv2__Overrun_Rule</fullName>
    <active>true</active>
    <description>Household Name Overrun must not be blank.</description>
    <errorConditionFormula>ISBLANK( ucinn_ascendv2__Household_Name_Overrun__c )</errorConditionFormula>
    <errorDisplayField>ucinn_ascendv2__Household_Name_Overrun__c</errorDisplayField>
    <errorMessage>Household Name Overrun must not be blank.</errorMessage>
</ValidationRule>