force-app/main/default/objects/ucinn_ascendv2__Bio_Demo_Setting__mdt/validationRules/ucinn_ascendv2__SmartyStreets_Timeout_Limit_Min_Max.validationRule-meta.xml
<ValidationRule>
    <fullName>ucinn_ascendv2__SmartyStreets_Timeout_Limit_Min_Max</fullName>
    <active>true</active>
    <errorConditionFormula>OR ( ucinn_ascendv2__SmartyStreet_Timeout_Limit__c &gt; 120, ucinn_ascendv2__SmartyStreet_Timeout_Limit__c &lt; 1)</errorConditionFormula>
    <errorDisplayField>ucinn_ascendv2__SmartyStreet_Timeout_Limit__c</errorDisplayField>
    <errorMessage>SmartyStreets Timeout Limit must be greater than or equal to 1 seconds and less than or equal to 120 seconds.</errorMessage>
</ValidationRule>